commander-cache/src/main/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: commander-cache
  name: commander-cache
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    deployment: commander-cache
status:
  loadBalancer: {}
