commander-cache/src/main/k8s/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: commander-cache
  name: commander-cache
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: commander-cache
    weight: 100
  wildcardPolicy: None
